--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
-plugins:
-  - jekyll-feed
+# Site settings
+title: Recipes
+baseurl: "/recipes" # the subpath of your site, e.g. /blog/
+url: "http://rldavies.github.io" # the base hostname & protocol for your site
+github_username:  rldavies
+
+# Build settings
+markdown: kramdown
+permalink: /:year/:title:output_ext
